# beefenstein-3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOld.txt  CMakePresets.json  README.md
include/: BeefPlayer.h  CallbackFunctions.h  CommonDefs.h  DrawFuncs.h  FPSProfiling.h  FrameRate.h  GPbase.h  LoadShaders.h  Raycast.h  SDLbase.h
lib/: LoadShaders.cpp  gl3wlib.lib  glfw3.lib
src/: BeefPlayer.c  CallbackFunctions.c  DrawFuncs.c  FPSProfiling.c  FrameRate.c  GPbase.c  Player.c  Raycast.c  SDLbase.c  WorldMap.c  sdlMain.c
src/Shaders/: triangles.frag  triangles.vert
